# Kifetch

./: Cargo.toml  README.md  kifetch.toml
logos/: linux.txt
src/: config.rs  constants.rs  logo.rs  main.rs  render.rs  utils.rs
src/fetcher/: mod.rs
src/fetcher/gpu/: mod.rs  nvidia.rs
src/modules/: bios_info.rs  cpu_info.rs  disk_info.rs  env_info.rs  gpu_info.rs  kernel_info.rs  memory_info.rs  mod.rs  net_info.rs  os_info.rs  packages_info.rs  screen_info.rs  uptime_info.rs
