[package]
name = "kifetch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.10"
phf = { version = "0.11", features = ["macros"] }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55.0" }
windows = { version = "0.61.1", features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Win32_Networking_WinSock",
] }
socket2 = "0.5.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2.172"
pnet = "0.35.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
